Fixed bug with navbar being too wide on some devices

--- a/components/navBar.scss
+++ b/components/navBar.scss
@@ -2,7 +2,7 @@
 
 #nav-bar {
     position: fixed;
-    width: 100%;
+    width: 100vw;
     top: 0px;
     z-index: 100;
 
